--- a/train_and_deploy.ipynb
+++ b/train_and_deploy.ipynb
@@ -142,8 +142,8 @@
     "print(\"AWS Region: {}\".format(region))\n",
     "print(\"RoleArn: {}\".format(role))\n",
     "\n",
-    "#os.environ[\"DEFAULT_S3_BUCKET\"] = bucket\n",
-    "#!aws s3 sync ./dogImages s3://${DEFAULT_S3_BUCKET}/data/"
+    "os.environ[\"DEFAULT_S3_BUCKET\"] = bucket\n",
+    "!aws s3 sync ./dogImages s3://${DEFAULT_S3_BUCKET}/data/"
    ]
   },
   {
@@ -514,7 +514,6 @@
     }
    ],
    "source": [
-    "from sagemaker.pytorch import PyTorch\n",
     "# Declare your HP ranges, metrics etc.\n",
     "from sagemaker.tuner import (\n",
     "    CategoricalParameter,\n",
@@ -564,8 +563,7 @@
    "source": [
     "# Set certain OS variables\n",
     "os.environ['SM_MODEL_DIR']='s3://{}/model/'.format(bucket)\n",
-    "os.environ['SM_CHANNEL_TRAIN']='s3://{}/data/'.format(bucket)\n",
-    "#os.environ['SM_OUTPUT_DATA_DIR']='s3://{}/output/'.format(bucket)"
+    "os.environ['SM_CHANNEL_TRAIN']='s3://{}/data/'.format(bucket)"
    ]
   },
   {
@@ -590,58 +588,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "best_estimator = tuner.best_training_job()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "tags": []
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pytorch-training-230227-1323-001-440b8f3a\n"
+      "\n",
+      "2023-02-27 13:41:18 Starting - Preparing the instances for training\n",
+      "2023-02-27 13:41:18 Downloading - Downloading input data\n",
+      "2023-02-27 13:41:18 Training - Training image download completed. Training in progress.\n",
+      "2023-02-27 13:41:18 Uploading - Uploading generated training model\n",
+      "2023-02-27 13:41:18 Completed - Resource released due to keep alive period expiry\n"
      ]
-    }
-   ],
-   "source": [
-    "print(best_estimator)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
+    },
     {
-     "ename": "AttributeError",
-     "evalue": "'str' object has no attribute 'hyperparameters'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-7-14ab15c4aee6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m#Get the hyperparameters of the best trained model\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mbest_estimator\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhyperparameters\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'str' object has no attribute 'hyperparameters'"
-     ]
+     "data": {
+      "text/plain": [
+       "{'_tuning_objective_metric': '\"average test loss\"',\n",
+       " 'batch_size': '\"32\"',\n",
+       " 'lr': '0.08277499248803206',\n",
+       " 'sagemaker_container_log_level': '20',\n",
+       " 'sagemaker_estimator_class_name': '\"PyTorch\"',\n",
+       " 'sagemaker_estimator_module': '\"sagemaker.pytorch.estimator\"',\n",
+       " 'sagemaker_job_name': '\"pytorch-training-2023-02-27-13-23-42-951\"',\n",
+       " 'sagemaker_program': '\"hpo.py\"',\n",
+       " 'sagemaker_region': '\"us-east-1\"',\n",
+       " 'sagemaker_submit_directory': '\"s3://sagemaker-us-east-1-519574148523/pytorch-training-2023-02-27-10-26-22-467/source/sourcedir.tar.gz\"'}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Get the best estimators and the best HPs\n",
-    "\n",
     "best_estimator = tuner.best_estimator()\n",
     "\n",
     "#Get the hyperparameters of the best trained model\n",
     "best_estimator.hyperparameters()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'batch_size': 32, 'learning_rate': '0.08277499248803206'}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hyperparameters = {\"batch_size\": int(best_estimator.hyperparameters()['batch_size'].replace('\"', '')), \\\n",
+    "                   \"learning_rate\": best_estimator.hyperparameters()['lr']}\n",
+    "hyperparameters"
    ]
   },
   {
@@ -1237,7 +1248,6 @@
     "vcpuNum": 192
    }
   ],
-  "instance_type": "ml.t3.medium",
   "kernelspec": {
    "display_name": "Python 3 (Data Science)",
    "language": "python",
