--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "6c7125cc-74bd-4c18-8ce2-13c90ca2a9a1",
    "metadata": {
     "tags": []
@@ -25,9 +25,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Default Bucket: sagemaker-us-east-1-519574148523\n",
+      "Default Bucket: sagemaker-us-east-1-155899448731\n",
       "AWS Region: us-east-1\n",
-      "RoleArn: arn:aws:iam::519574148523:role/service-role/AmazonSageMaker-ExecutionRole-20230209T103282\n"
+      "RoleArn: arn:aws:iam::155899448731:role/service-role/AmazonSageMaker-ExecutionRole-20221216T092014\n"
      ]
     }
    ],
@@ -35,7 +35,7 @@
     "import os\n",
     "from sagemaker import get_execution_role\n",
     "\n",
-    "bucket= 'sagemaker-us-east-1-519574148523'\n",
+    "bucket= 'sagemaker-us-east-1-155899448731'\n",
     "region = 'us-east-1'\n",
     "role =  get_execution_role()\n",
     "print(\"Default Bucket: {}\".format(bucket))\n",
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "e341e06b-582e-4022-831a-9875649929ee",
    "metadata": {
     "tags": []
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "5536befe-455d-4a93-94aa-12e33d4460a9",
    "metadata": {
     "tags": []
@@ -71,38 +71,38 @@
      "text": [
       "INFO:sagemaker.image_uris:image_uri is not presented, retrieving image_uri based on instance_type, framework etc.\n",
       "INFO:sagemaker.image_uris:image_uri is not presented, retrieving image_uri based on instance_type, framework etc.\n",
-      "INFO:sagemaker:Creating training-job with name: pytorch-training-2023-03-03-02-04-31-091\n"
+      "INFO:sagemaker:Creating training-job with name: pytorch-training-2023-03-08-07-32-52-475\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023-03-03 02:04:31 Starting - Starting the training job...\n",
-      "2023-03-03 02:04:56 Starting - Preparing the instances for training......\n",
-      "2023-03-03 02:06:00 Downloading - Downloading input data.........\n",
-      "2023-03-03 02:07:16 Training - Downloading the training image...\n",
-      "2023-03-03 02:07:51 Training - Training image download completed. Training in progress...\u001b[34mbash: cannot set terminal process group (-1): Inappropriate ioctl for device\u001b[0m\n",
+      "2023-03-08 07:32:53 Starting - Starting the training job...\n",
+      "2023-03-08 07:33:14 Starting - Preparing the instances for training......\n",
+      "2023-03-08 07:34:14 Downloading - Downloading input data......\n",
+      "2023-03-08 07:35:14 Training - Downloading the training image......\n",
+      "2023-03-08 07:36:00 Training - Training image download completed. Training in progress.\u001b[34mbash: cannot set terminal process group (-1): Inappropriate ioctl for device\u001b[0m\n",
       "\u001b[34mbash: no job control in this shell\u001b[0m\n",
-      "\u001b[34m2023-03-03 02:08:05,600 sagemaker-containers INFO     Imported framework sagemaker_pytorch_container.training\u001b[0m\n",
-      "\u001b[34m2023-03-03 02:08:05,628 sagemaker_pytorch_container.training INFO     Block until all host DNS lookups succeed.\u001b[0m\n",
-      "\u001b[34m2023-03-03 02:08:05,631 sagemaker_pytorch_container.training INFO     Invoking user training script.\u001b[0m\n",
-      "\u001b[34m2023-03-03 02:08:05,792 sagemaker-containers INFO     Module default_user_module_name does not provide a setup.py. \u001b[0m\n",
+      "\u001b[34m2023-03-08 07:36:11,603 sagemaker-containers INFO     Imported framework sagemaker_pytorch_container.training\u001b[0m\n",
+      "\u001b[34m2023-03-08 07:36:11,633 sagemaker_pytorch_container.training INFO     Block until all host DNS lookups succeed.\u001b[0m\n",
+      "\u001b[34m2023-03-08 07:36:11,635 sagemaker_pytorch_container.training INFO     Invoking user training script.\u001b[0m\n",
+      "\u001b[34m2023-03-08 07:36:11,810 sagemaker-containers INFO     Module default_user_module_name does not provide a setup.py. \u001b[0m\n",
       "\u001b[34mGenerating setup.py\u001b[0m\n",
-      "\u001b[34m2023-03-03 02:08:05,793 sagemaker-containers INFO     Generating setup.cfg\u001b[0m\n",
-      "\u001b[34m2023-03-03 02:08:05,793 sagemaker-containers INFO     Generating MANIFEST.in\u001b[0m\n",
-      "\u001b[34m2023-03-03 02:08:05,793 sagemaker-containers INFO     Installing module with the following command:\u001b[0m\n",
+      "\u001b[34m2023-03-08 07:36:11,810 sagemaker-containers INFO     Generating setup.cfg\u001b[0m\n",
+      "\u001b[34m2023-03-08 07:36:11,810 sagemaker-containers INFO     Generating MANIFEST.in\u001b[0m\n",
+      "\u001b[34m2023-03-08 07:36:11,810 sagemaker-containers INFO     Installing module with the following command:\u001b[0m\n",
       "\u001b[34m/opt/conda/bin/python3.6 -m pip install . \u001b[0m\n",
-      "\u001b[34mProcessing /tmp/tmpt0i2rdoh/module_dir\u001b[0m\n",
+      "\u001b[34mProcessing /tmp/tmpe_f363ig/module_dir\u001b[0m\n",
       "\u001b[34mBuilding wheels for collected packages: default-user-module-name\n",
       "  Building wheel for default-user-module-name (setup.py): started\n",
       "  Building wheel for default-user-module-name (setup.py): finished with status 'done'\n",
-      "  Created wheel for default-user-module-name: filename=default_user_module_name-1.0.0-py2.py3-none-any.whl size=6352 sha256=930277c5ef5ad2670bb3c29273229bc9b477412ca18975916c289d70118d7ed9\n",
-      "  Stored in directory: /tmp/pip-ephem-wheel-cache-tnruifxc/wheels/df/49/22/a12b7cff00f7cc6dae897e74ed66bb75e9c027f382686a3f9e\u001b[0m\n",
+      "  Created wheel for default-user-module-name: filename=default_user_module_name-1.0.0-py2.py3-none-any.whl size=6352 sha256=e6223b652b8c7f44a6403fff06cdfed4fc53303be4a691ada9440849dc79b85f\n",
+      "  Stored in directory: /tmp/pip-ephem-wheel-cache-0pa09uoe/wheels/57/40/20/e99d2f6b415112fedcff2977fcf29ee5106d758cb9a5cef12c\u001b[0m\n",
       "\u001b[34mSuccessfully built default-user-module-name\u001b[0m\n",
       "\u001b[34mInstalling collected packages: default-user-module-name\u001b[0m\n",
       "\u001b[34mSuccessfully installed default-user-module-name-1.0.0\u001b[0m\n",
-      "\u001b[34m2023-03-03 02:08:07,770 sagemaker-containers INFO     Invoking user script\u001b[0m\n",
+      "\u001b[34m2023-03-08 07:36:13,832 sagemaker-containers INFO     Invoking user script\u001b[0m\n",
       "\u001b[34mTraining Env:\u001b[0m\n",
       "\u001b[34m{\n",
       "    \"additional_framework_parameters\": {},\n",
@@ -116,7 +116,7 @@
       "    ],\n",
       "    \"hyperparameters\": {\n",
       "        \"batch_size\": 32,\n",
-      "        \"learning_rate\": \"0.08277499248803206\"\n",
+      "        \"learning_rate\": \"0.0036711776122006303\"\n",
       "    },\n",
       "    \"input_config_dir\": \"/opt/ml/input/config\",\n",
       "    \"input_data_config\": {\n",
@@ -128,11 +128,11 @@
       "    },\n",
       "    \"input_dir\": \"/opt/ml/input\",\n",
       "    \"is_master\": true,\n",
-      "    \"job_name\": \"pytorch-training-2023-03-03-02-04-31-091\",\n",
+      "    \"job_name\": \"pytorch-training-2023-03-08-07-32-52-475\",\n",
       "    \"log_level\": 20,\n",
       "    \"master_hostname\": \"algo-1\",\n",
       "    \"model_dir\": \"/opt/ml/model\",\n",
-      "    \"module_dir\": \"s3://sagemaker-us-east-1-519574148523/pytorch-training-2023-03-03-02-04-31-091/source/sourcedir.tar.gz\",\n",
+      "    \"module_dir\": \"s3://sagemaker-us-east-1-155899448731/pytorch-training-2023-03-08-07-32-52-475/source/sourcedir.tar.gz\",\n",
       "    \"module_name\": \"test_train\",\n",
       "    \"network_interface_name\": \"eth0\",\n",
       "    \"num_cpus\": 4,\n",
@@ -163,7 +163,7 @@
       "\u001b[34mEnvironment variables:\u001b[0m\n",
       "\u001b[34mSM_HOSTS=[\"algo-1\"]\u001b[0m\n",
       "\u001b[34mSM_NETWORK_INTERFACE_NAME=eth0\u001b[0m\n",
-      "\u001b[34mSM_HPS={\"batch_size\":32,\"learning_rate\":\"0.08277499248803206\"}\u001b[0m\n",
+      "\u001b[34mSM_HPS={\"batch_size\":32,\"learning_rate\":\"0.0036711776122006303\"}\u001b[0m\n",
       "\u001b[34mSM_USER_ENTRY_POINT=test_train.py\u001b[0m\n",
       "\u001b[34mSM_FRAMEWORK_PARAMS={}\u001b[0m\n",
       "\u001b[34mSM_RESOURCE_CONFIG={\"current_group_name\":\"homogeneousCluster\",\"current_host\":\"algo-1\",\"current_instance_type\":\"ml.g4dn.xlarge\",\"hosts\":[\"algo-1\"],\"instance_groups\":[{\"hosts\":[\"algo-1\"],\"instance_group_name\":\"homogeneousCluster\",\"instance_type\":\"ml.g4dn.xlarge\"}],\"network_interface_name\":\"eth0\"}\u001b[0m\n",
@@ -180,39 +180,39 @@
       "\u001b[34mSM_NUM_CPUS=4\u001b[0m\n",
       "\u001b[34mSM_NUM_GPUS=1\u001b[0m\n",
       "\u001b[34mSM_MODEL_DIR=/opt/ml/model\u001b[0m\n",
-      "\u001b[34mSM_MODULE_DIR=s3://sagemaker-us-east-1-519574148523/pytorch-training-2023-03-03-02-04-31-091/source/sourcedir.tar.gz\u001b[0m\n",
-      "\u001b[34mSM_TRAINING_ENV={\"additional_framework_parameters\":{},\"channel_input_dirs\":{\"train\":\"/opt/ml/input/data/train\"},\"current_host\":\"algo-1\",\"framework_module\":\"sagemaker_pytorch_container.training:main\",\"hosts\":[\"algo-1\"],\"hyperparameters\":{\"batch_size\":32,\"learning_rate\":\"0.08277499248803206\"},\"input_config_dir\":\"/opt/ml/input/config\",\"input_data_config\":{\"train\":{\"RecordWrapperType\":\"None\",\"S3DistributionType\":\"FullyReplicated\",\"TrainingInputMode\":\"File\"}},\"input_dir\":\"/opt/ml/input\",\"is_master\":true,\"job_name\":\"pytorch-training-2023-03-03-02-04-31-091\",\"log_level\":20,\"master_hostname\":\"algo-1\",\"model_dir\":\"/opt/ml/model\",\"module_dir\":\"s3://sagemaker-us-east-1-519574148523/pytorch-training-2023-03-03-02-04-31-091/source/sourcedir.tar.gz\",\"module_name\":\"test_train\",\"network_interface_name\":\"eth0\",\"num_cpus\":4,\"num_gpus\":1,\"output_data_dir\":\"/opt/ml/output/data\",\"output_dir\":\"/opt/ml/output\",\"output_intermediate_dir\":\"/opt/ml/output/intermediate\",\"resource_config\":{\"current_group_name\":\"homogeneousCluster\",\"current_host\":\"algo-1\",\"current_instance_type\":\"ml.g4dn.xlarge\",\"hosts\":[\"algo-1\"],\"instance_groups\":[{\"hosts\":[\"algo-1\"],\"instance_group_name\":\"homogeneousCluster\",\"instance_type\":\"ml.g4dn.xlarge\"}],\"network_interface_name\":\"eth0\"},\"user_entry_point\":\"test_train.py\"}\u001b[0m\n",
-      "\u001b[34mSM_USER_ARGS=[\"--batch_size\",\"32\",\"--learning_rate\",\"0.08277499248803206\"]\u001b[0m\n",
+      "\u001b[34mSM_MODULE_DIR=s3://sagemaker-us-east-1-155899448731/pytorch-training-2023-03-08-07-32-52-475/source/sourcedir.tar.gz\u001b[0m\n",
+      "\u001b[34mSM_TRAINING_ENV={\"additional_framework_parameters\":{},\"channel_input_dirs\":{\"train\":\"/opt/ml/input/data/train\"},\"current_host\":\"algo-1\",\"framework_module\":\"sagemaker_pytorch_container.training:main\",\"hosts\":[\"algo-1\"],\"hyperparameters\":{\"batch_size\":32,\"learning_rate\":\"0.0036711776122006303\"},\"input_config_dir\":\"/opt/ml/input/config\",\"input_data_config\":{\"train\":{\"RecordWrapperType\":\"None\",\"S3DistributionType\":\"FullyReplicated\",\"TrainingInputMode\":\"File\"}},\"input_dir\":\"/opt/ml/input\",\"is_master\":true,\"job_name\":\"pytorch-training-2023-03-08-07-32-52-475\",\"log_level\":20,\"master_hostname\":\"algo-1\",\"model_dir\":\"/opt/ml/model\",\"module_dir\":\"s3://sagemaker-us-east-1-155899448731/pytorch-training-2023-03-08-07-32-52-475/source/sourcedir.tar.gz\",\"module_name\":\"test_train\",\"network_interface_name\":\"eth0\",\"num_cpus\":4,\"num_gpus\":1,\"output_data_dir\":\"/opt/ml/output/data\",\"output_dir\":\"/opt/ml/output\",\"output_intermediate_dir\":\"/opt/ml/output/intermediate\",\"resource_config\":{\"current_group_name\":\"homogeneousCluster\",\"current_host\":\"algo-1\",\"current_instance_type\":\"ml.g4dn.xlarge\",\"hosts\":[\"algo-1\"],\"instance_groups\":[{\"hosts\":[\"algo-1\"],\"instance_group_name\":\"homogeneousCluster\",\"instance_type\":\"ml.g4dn.xlarge\"}],\"network_interface_name\":\"eth0\"},\"user_entry_point\":\"test_train.py\"}\u001b[0m\n",
+      "\u001b[34mSM_USER_ARGS=[\"--batch_size\",\"32\",\"--learning_rate\",\"0.0036711776122006303\"]\u001b[0m\n",
       "\u001b[34mSM_OUTPUT_INTERMEDIATE_DIR=/opt/ml/output/intermediate\u001b[0m\n",
       "\u001b[34mSM_CHANNEL_TRAIN=/opt/ml/input/data/train\u001b[0m\n",
       "\u001b[34mSM_HP_BATCH_SIZE=32\u001b[0m\n",
-      "\u001b[34mSM_HP_LEARNING_RATE=0.08277499248803206\u001b[0m\n",
+      "\u001b[34mSM_HP_LEARNING_RATE=0.0036711776122006303\u001b[0m\n",
       "\u001b[34mPYTHONPATH=/opt/ml/code:/opt/conda/bin:/opt/conda/lib/python36.zip:/opt/conda/lib/python3.6:/opt/conda/lib/python3.6/lib-dynload:/opt/conda/lib/python3.6/site-packages\u001b[0m\n",
       "\u001b[34mInvoking script with the following command:\u001b[0m\n",
-      "\u001b[34m/opt/conda/bin/python3.6 test_train.py --batch_size 32 --learning_rate 0.08277499248803206\u001b[0m\n",
-      "\u001b[34mNamespace(batch_size=32, data='/opt/ml/input/data/train', learning_rate=0.08277499248803206, model_dir='/opt/ml/model', output_dir='/opt/ml/output/data')\u001b[0m\n",
-      "\u001b[34mHyperparameters are LR: 0.08277499248803206, Batch Size: 32\u001b[0m\n",
+      "\u001b[34m/opt/conda/bin/python3.6 test_train.py --batch_size 32 --learning_rate 0.0036711776122006303\u001b[0m\n",
+      "\u001b[34mNamespace(batch_size=32, data='/opt/ml/input/data/train', learning_rate=0.0036711776122006303, model_dir='/opt/ml/model', output_dir='/opt/ml/output/data')\u001b[0m\n",
+      "\u001b[34mHyperparameters are LR: 0.0036711776122006303, Batch Size: 32\u001b[0m\n",
       "\u001b[34mData Paths: /opt/ml/input/data/train\u001b[0m\n",
       "\u001b[34mStarting Model Training\u001b[0m\n",
       "\u001b[34mEpoch: 0\u001b[0m\n",
-      "\u001b[34m[2023-03-03 02:08:10.112 algo-1:45 INFO json_config.py:90] Creating hook from json_config at /opt/ml/input/config/debughookconfig.json.\u001b[0m\n",
-      "\u001b[34m[2023-03-03 02:08:10.112 algo-1:45 INFO hook.py:192] tensorboard_dir has not been set for the hook. SMDebug will not be exporting tensorboard summaries.\u001b[0m\n",
-      "\u001b[34m[2023-03-03 02:08:10.112 algo-1:45 INFO hook.py:237] Saving to /opt/ml/output/tensors\u001b[0m\n",
-      "\u001b[34m[2023-03-03 02:08:10.112 algo-1:45 INFO state_store.py:67] The checkpoint config file /opt/ml/input/config/checkpointconfig.json does not exist.\u001b[0m\n",
-      "\u001b[34m[2023-03-03 02:08:10.118 algo-1:45 INFO hook.py:382] Monitoring the collections: losses\u001b[0m\n",
-      "\u001b[34m[2023-03-03 02:08:10.119 algo-1:45 INFO hook.py:443] Hook is writing from the hook with pid: 45\u001b[0m\n",
-      "\u001b[34mtrain loss: 254.0000, acc: 0.0000, best loss: 1000000.0000\u001b[0m\n",
-      "\u001b[34mvalid loss: 151.0000, acc: 0.0000, best loss: 151.0000\u001b[0m\n",
+      "\u001b[34m[2023-03-08 07:36:16.027 algo-1:46 INFO json_config.py:90] Creating hook from json_config at /opt/ml/input/config/debughookconfig.json.\u001b[0m\n",
+      "\u001b[34m[2023-03-08 07:36:16.027 algo-1:46 INFO hook.py:192] tensorboard_dir has not been set for the hook. SMDebug will not be exporting tensorboard summaries.\u001b[0m\n",
+      "\u001b[34m[2023-03-08 07:36:16.028 algo-1:46 INFO hook.py:237] Saving to /opt/ml/output/tensors\u001b[0m\n",
+      "\u001b[34m[2023-03-08 07:36:16.028 algo-1:46 INFO state_store.py:67] The checkpoint config file /opt/ml/input/config/checkpointconfig.json does not exist.\u001b[0m\n",
+      "\u001b[34m[2023-03-08 07:36:16.034 algo-1:46 INFO hook.py:382] Monitoring the collections: losses\u001b[0m\n",
+      "\u001b[34m[2023-03-08 07:36:16.034 algo-1:46 INFO hook.py:443] Hook is writing from the hook with pid: 46\u001b[0m\n",
+      "\u001b[34mtrain loss: 102.0000, acc: 7.0000, best loss: 1000000.0000\u001b[0m\n",
+      "\u001b[34mvalid loss: 45.0000, acc: 18.0000, best loss: 45.0000\u001b[0m\n",
       "\u001b[34mTesting Model\u001b[0m\n",
-      "\u001b[34mTesting Loss: 151.0\u001b[0m\n",
-      "\u001b[34mTesting Accuracy: 0.0\u001b[0m\n",
+      "\u001b[34mTesting Loss: 47.0\u001b[0m\n",
+      "\u001b[34mTesting Accuracy: 17.0\u001b[0m\n",
       "\u001b[34mSaving Model\u001b[0m\n",
-      "\u001b[34m2023-03-03 02:24:31,489 sagemaker-containers INFO     Reporting training SUCCESS\u001b[0m\n",
+      "\u001b[34m2023-03-08 07:52:41,071 sagemaker-containers INFO     Reporting training SUCCESS\u001b[0m\n",
       "\n",
-      "2023-03-03 02:24:57 Uploading - Uploading generated training model\n",
-      "2023-03-03 02:24:57 Completed - Training job completed\n",
-      "Training seconds: 1136\n",
-      "Billable seconds: 1136\n"
+      "2023-03-08 07:53:08 Uploading - Uploading generated training model\n",
+      "2023-03-08 07:53:08 Completed - Training job completed\n",
+      "Training seconds: 1134\n",
+      "Billable seconds: 1134\n"
      ]
     }
    ],
@@ -226,7 +226,7 @@
     "    entry_point=\"test_train.py\",\n",
     "    framework_version=\"1.4.0\",\n",
     "    py_version=\"py3\",\n",
-    "    hyperparameters={'batch_size': 32, 'learning_rate': '0.08277499248803206'},\n",
+    "    hyperparameters={'batch_size': 32, 'learning_rate': '0.0036711776122006303'},\n",
     ")\n",
     "\n",
     "estimator.fit({'train': \"s3://{}/data/\".format(bucket)},wait=True) "
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "3746dc05-7f86-4f35-9f97-2c0482dd128c",
    "metadata": {
     "tags": []
@@ -244,7 +244,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training jobname: pytorch-training-2023-03-03-02-04-31-091\n"
+      "Training jobname: pytorch-training-2023-03-08-07-32-52-475\n"
      ]
     }
    ],
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "id": "8f686460-2732-4e8c-9b7b-4c5d019a0bb0",
    "metadata": {
     "tags": []
@@ -265,7 +265,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "s3://sagemaker-us-east-1-519574148523/pytorch-training-2023-03-03-02-04-31-091/output/model.tar.gz\n"
+      "s3://sagemaker-us-east-1-155899448731/pytorch-training-2023-03-08-07-32-52-475/output/model.tar.gz\n"
      ]
     }
    ],
